objects/Root_Case__c.object
<CustomObject>
    <fields>
        <fullName>All_Fields_Verified__c</fullName>
        <defaultValue>&apos;No&apos;</defaultValue>
        <label>Mozilla All Fields Verified?</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Information_Verified__c</fullName>
        <label>Application Information Verified?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Verified</fullName>
                    <default>true</default>
                    <label>Not Verified</label>
                </value>
                <value>
                    <fullName>Data Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apply_Audit_Verified__c</fullName>
        <label>Applicable Audits Verified?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Verified</fullName>
                    <default>true</default>
                    <label>Not Verified</label>
                </value>
                <value>
                    <fullName>Data Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apply_BR_Audit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BR Audit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apply_Code_Signing_Audit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Code Signing Audit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apply_EV_Audit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EV SSL Audit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apply_EV_Code_Signing_Audit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EV Code Signing Audit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apply_Standard_Audit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Standard Audit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Audit_Gap__c</fullName>
        <formula>Standard_Audit_Date_Gap__c || Code_Signing_Audit_Date_Gap__c || BR_Audit_Date_Gap__c || EV_SSL_Audit_Date_Gap__c || EV_Code_Signing_Audit_Date_Gap__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Audit Gap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auditor_Location_New_Verified__c</fullName>
        <label>DELETE Auditor Location (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auditor_Location_New__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Country where the Auditor who issued the standard audit statement is based out of. See &apos;List All Auditors&apos; below for choices. Send email to support@ccadb.org if your auditor is not listed.</inlineHelpText>
        <label>DELETE Auditor Location</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Not a valid value for selected Auditor</errorMessage>
            <filterItems>
                <field>Auditor_Location__c.Auditor__c</field>
                <operation>equals</operation>
                <valueField>$Source.Auditor_New__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Auditor_Location__c</referenceTo>
        <relationshipLabel>Root Cases</relationshipLabel>
        <relationshipName>Root_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auditor_Name_Verified__c</fullName>
        <label>DELETE Auditor Name (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auditor_Name__c</fullName>
        <label>DELETE Auditor Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auditor_New_Verified__c</fullName>
        <label>DELETE Auditor (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auditor_New__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Name of Auditor who issued the standard audit statement. See &apos;List All Auditors&apos; below for choices. Send email to support@ccadb.org if your auditor is not listed.</inlineHelpText>
        <label>DELETE Auditor</label>
        <referenceTo>Auditor__c</referenceTo>
        <relationshipLabel>Root Cases</relationshipLabel>
        <relationshipName>Root_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auditor_Qualifications_Verified__c</fullName>
        <label>DELETE Auditor Qualificat (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auditor_Qualifications__c</fullName>
        <label>DELETE Auditor Qualifications</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Auditor_Website_Verified__c</fullName>
        <label>DELETE Auditor Website (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auditor_Website__c</fullName>
        <label>DELETE Auditor Website</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Auto_Review_Results__c</fullName>
        <inlineHelpText>Results returned by Audit Letter Validation webservice</inlineHelpText>
        <label>ALV Results</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Auto_Review_Status__c</fullName>
        <inlineHelpText>Status returned by Audit Letter Validation webservice</inlineHelpText>
        <label>ALV Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BR_Audit_Date_Gap__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Updated by trigger</description>
        <label>BR Audit Date Gap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BR_Audit_Period_Dates_Verified__c</fullName>
        <label>DELETE BR Audit Period Dates (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BR_Audit_Period_End_Date__c</fullName>
        <label>DELETE BR Audit Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BR_Audit_Period_Start_Date__c</fullName>
        <label>DELETE BR Audit Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BR_Audit_Statement_Date_Verified__c</fullName>
        <label>DELETE BR Audit State Date (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BR_Audit_Statement_Date__c</fullName>
        <label>DELETE BR Audit Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BR_Audit_Type_Verified__c</fullName>
        <label>DELETE BR Audit Type (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BR_Audit_Type__c</fullName>
        <label>DELETE BR Audit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WebTrust</fullName>
                </value>
                <value>
                    <fullName>ETSI EN 319 411</fullName>
                </value>
                <value>
                    <fullName>ETSI TS 102 042</fullName>
                </value>
                <value>
                    <fullName>Equivalent WebTrust</fullName>
                </value>
                <value>
                    <fullName>Equivalent ETSI EN 319 411</fullName>
                </value>
                <value>
                    <fullName>Equivalent ETSI 102 042</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BR_Audit_Verified__c</fullName>
        <label>DELETE BR Audit (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BR_Audit__c</fullName>
        <defaultValue>&quot;NEED: If requesting Websites trust bit, then also need a BR audit as per Mozilla&apos;s Root Store Policy.&quot;</defaultValue>
        <inlineHelpText>Provide public-facing BR audit statement.</inlineHelpText>
        <label>DELETE BR Audit</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BR_Commitment_to_Comply_Verified__c</fullName>
        <label>DELETE BR Commit to Comply (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BR_Commitment_to_Comply__c</fullName>
        <defaultValue>&quot;NEED: If requesting Websites trust bit, need section in the CP/CPS that has the commitment to comply with the BRs as described in section 2.2 of the CA/Browser Forum&apos;s Baseline Requirements.&quot;</defaultValue>
        <label>DELETE BR Commitment to Comply</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BR_Self_Assessment_Verified__c</fullName>
        <label>DELETE BR Self Assessment (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BR_Self_Assessment__c</fullName>
        <defaultValue>&quot;NEED: If requesting Websites trust bit, attach BR Self Assessment (https://wiki.mozilla.org/CA/BR_Self-Assessment) to the Bugzilla Bug.&quot;</defaultValue>
        <inlineHelpText>Link to the CA&apos;s BR Self Assessment document in Bugzilla</inlineHelpText>
        <label>DELETE BR Self Assessment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CA_Browser_Forum_Lint_Test_Verified__c</fullName>
        <label>DELETECA/BrowserForumLintTest(Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CA_Browser_Forum_Lint_Test__c</fullName>
        <defaultValue>IF ($RecordType.Name = &quot;CA Root Inclusion Request&quot;, 
&quot;NEED: Provide evidence that you have tested and verified that no certificates issued in this CA hierarchy violate any of the CA/Browser Forum Baseline Requirements (BRs).&quot; &amp; BR() &amp;
&quot;BR Lint Test: https://github.com/awslabs/certlint&quot; &amp; BR() &amp; BR() &amp;
&quot;Mozilla will check that the CA is not issuing certificates that violate any of the BRs by using crt.sh on the root and subordinate CAs via: https://crt.sh/?caid=&lt;CA ID&gt;&amp;opt=cablint,zlint,x509lint&amp;minNotBefore=2014-01-01&quot; &amp; BR() &amp;
&quot;and/or&quot; &amp; BR() &amp; 
&quot;The Lint tests in https://crt.sh/?a=1&quot;, 
&quot;&quot;)</defaultValue>
        <inlineHelpText>Browse to https://crt.sh/ and enter the SHA-1 Fingerprint for the root certificate. Then click on the &apos;Search&apos; button. Then click on the &apos;Run cablint&apos; link. All errors must be resolved/fixed.</inlineHelpText>
        <label>CA/Browser Forum Lint Test</label>
        <length>750</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CA_Document_Repository_Verified__c</fullName>
        <label>DELETECA Document Repository (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CA_Document_Repository__c</fullName>
        <label>DELETE CA Document Repository</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CA_Hierarchy_Verified__c</fullName>
        <label>DELETE CA Hierarchy (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CA_Hierarchy__c</fullName>
        <defaultValue>&quot;NEED: A description of the PKI hierarchy rooted at or otherwise associated with this root CA certificate.&quot; &amp; BR() &amp;
&quot;- List and/or describe all of the subordinate CAs that are signed by this root.&quot; &amp; BR() &amp;
&quot;- Identify which of the subordinate CAs are internally-operated; e.g. list the subordinate CAs that operated by the CA organization associated with the root CA. For example, this might include subordinate CAs created to issue different classes or types of end entity certificates to the general public: Class 1 vs. class 2 certificates, qualified vs. non-qualified certificates, EV certificates vs. non-EV certificates, SSL certificates vs. email certificates, and so on.&quot; &amp; BR() &amp;
&quot;- It might also include subordinate CAs operated for the benefit of specific third parties. In this case note that we do not require that the CA submit a complete customer list; rather we are interested in the general type and nature of the third-party arrangements&quot;</defaultValue>
        <label>DELETE CA Hierarchy</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CA_Owner_Name_Existing__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Previously called Included CA Owner Name</description>
        <label>CA Owner Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Owner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Root Cases</relationshipLabel>
        <relationshipName>Root_Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPS_Doc_Language__c</fullName>
        <label>DELETE CPS Doc Language</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPS_Verified__c</fullName>
        <label>DELETE CPS (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPS__c</fullName>
        <label>DELETE CPS</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CP_CPS_allows_Ext_Operated_SubCAs__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>CP/CPS allows Externally Operated SubCAs?</inlineHelpText>
        <label>CP/CPS allows Ext Operated SubCAs?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CP_CPS_allows_External_RAs__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>CP/CPS allows External Registration Authorities?</inlineHelpText>
        <label>CP/CPS allows External RAs?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CP_Doc_Language__c</fullName>
        <label>DELETE CP Doc Language</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_Verified__c</fullName>
        <label>DELETE CP (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CP__c</fullName>
        <label>DELETE CP</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRL_URL_Verified__c</fullName>
        <label>DELETE CRL URL (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRL_URL_s__c</fullName>
        <defaultValue>&quot;NEED CRL URLs and CRL issuing frequency for subscriber certs, with reference to where this is documented in the CP/CPS&quot;</defaultValue>
        <label>DELETE CRL URL(s)</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_CAOwner_RootCert__c</fullName>
        <label>Case+CAOwner+RootCert</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Case_No__c</fullName>
        <label>Case No</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Root Cases</relationshipLabel>
        <relationshipName>Root_Cases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Case_Subject__c</fullName>
        <formula>Case_No__r.Subject</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cert_Signature_Algorithm_Verified__c</fullName>
        <label>Delete: Cert Signature Algo (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certificate_Fingerprint__c</fullName>
        <inlineHelpText>Identifies same logical certificate in different CA Hierarchies. SHA-256(der(subject) + der(spki))</inlineHelpText>
        <label>DELETE Certificate ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Certificate_Issuer_Common_Name__c</fullName>
        <label>Certificate Issuer Common Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Certificate_Serial_Number__c</fullName>
        <label>Certificate Serial Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Certificate_Signature_Algorithm__c</fullName>
        <label>DELETE Cert Signature Algorithm</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>D2</fullName>
                </value>
                <value>
                    <fullName>DSA</fullName>
                </value>
                <value>
                    <fullName>ECC</fullName>
                </value>
                <value>
                    <fullName>MD5</fullName>
                </value>
                <value>
                    <fullName>SHA-1</fullName>
                </value>
                <value>
                    <fullName>SHA-256</fullName>
                </value>
                <value>
                    <fullName>SHA-384</fullName>
                </value>
                <value>
                    <fullName>SHA-512</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certificate_Subject_Common_Name__c</fullName>
        <label>Certificate Subject Common Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Certificate_Summary_Verified__c</fullName>
        <label>DELETE Certificate Summary (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certificate_Summary__c</fullName>
        <label>DELETE Certificate Summary</label>
        <type>TextArea</type>
    </fields>
</CustomObject>